[metadata]
name = poorbmc
summary = Hacked virtual_bmc for controlling instances via cheap PDUs & grub
description-file =
    README.rst
author = owalsh
author-email = ollie.walsh@gmail.com
home-page = http://www.example.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    poorbmc

[entry_points]
console_scripts =
    pbmc = poorbmc.cmd.pbmc:main

poorbmc =
    add = poorbmc.cmd.pbmc:AddCommand
    delete = poorbmc.cmd.pbmc:DeleteCommand
    start = poorbmc.cmd.pbmc:StartCommand
    stop = poorbmc.cmd.pbmc:StopCommand
    list = poorbmc.cmd.pbmc:ListCommand
    show = poorbmc.cmd.pbmc:ShowCommand

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = poorbmc/locale
domain = poorbmc

[update_catalog]
domain = poorbmc
output_dir = poorbmc/locale
input_file = poorbmc/locale/poorbmc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = poorbmc/locale/poorbmc.pot
